# ml-rna

./: CMakeLists.txt  README.md
data/: bats_rodents.dnd  bats_rodents_pangos_civet.dnd  merbecoviruses.aln  merbecoviruses.dnd  merbecoviruses.fasta  sarbecoviruses.aln  sarbecoviruses_raw.fasta
docs/: SARS-CoV-2_genome.eps  research.tex  sn-bibliography.bib  sn-jnl.cls
scripts/: compute_dnds_from_mutsel.py  dn_ds.py  process.sh  run.sh
src/: analysis.cpp  analysis.h  fcsPatterns.h  main.cpp
